@@ -41,6 +41,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12438. TestLocalFileSystem tests can fail on Windows after HDFS-8767
     fix for handling pipe. (cnauroth)
 
+    HADOOP-12437. Allow SecurityUtil to lookup alternate hostnames.
+    (Arpit Agarwal)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
